# my_hpx

./: Journal.txt  PR_segmented_copy.txt  README.md  proof_of_concept.cpp
examples/: CMakeLists.txt  pascal_triangle_1.cpp  pascal_triangle_1_omp.cpp  pascal_triangle_2.cpp
hpx_vc/: CMakeLists.txt  test_vc.cpp
simd_perf/copy_datapar/: main.cpp
simd_perf/count_datapar/: default_simd.txt  main.cpp  native_simd.txt
simd_perf/fill_datapar/: default_simd.txt  main.cpp
simd_perf/foreach_datapar/: default_simd.txt  main.cpp  native_simd.txt
simd_perf/foreach_perf_test/: CMakeLists.txt  main.cpp
src/: 1d_stencil.cpp  1d_stencil_omp.cpp  CMakeLists.txt  fib_0.cpp  test.cpp
templates/: templates_summary.txt
templates/part1/chapter1_function_templates/: a.out  basic_func_templ.cpp
vc/: CMakeLists.txt  test_vc.cpp
